--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -19,10 +19,16 @@
 
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
+
 <resources>
 
     <!-- Doze: does this device support STATE_DOZE?  -->
     <bool name="doze_display_state_supported">true</bool>
+    
+  
+    <!-- Color of the FOD view -->
+    <color name="config_fodColor">#00ffffff</color>
+
 
     <!-- Max visible notification icons -->
     <integer name="config_maxVisibleNotificationIcons">7</integer>
