--- a/overlay-rr/packages/apps/Settings/res/values/config.xml
+++ b/overlay-rr/packages/apps/Settings/res/values/config.xml
@@ -20,4 +20,11 @@
        3 = right side
     -->
     <integer name="config_fingerprintSensorLocation">1</integer>
+
+    <!-- Battery Health -->
+    <bool name="config_supportBatteryHealth">true</bool>
+    <string name="config_batChargeCycle">/sys/class/power_supply/bms/cycle_count</string>
+    <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full_design</string>
+    <string name="config_batCurCap">/sys/class/power_supply/bms/charge_full</string>
+
 </resources>
