--- a/overlay-rr/packages/apps/Settings/res/values/config.xml
+++ b/overlay-rr/packages/apps/Settings/res/values/config.xml
@@ -27,4 +27,7 @@
     <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full_design</string>
     <string name="config_batCurCap">/sys/class/power_supply/bms/charge_full</string>
 
+    <!-- Use only if devices have variable intensity support for haptics-->
+    <bool name="config_vibration_supports_multiple_intensities">true</bool>
+
 </resources>
