some fod change/ switch to proton clang

--- a/overlay-pixeldust/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-pixeldust/frameworks/base/core/res/res/values/custom_config.xml
@@ -19,6 +19,9 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+   <!-- FOD fingerprint scanner -->
+    <bool name="config_needCustomFODView">true</bool>
+    
     <!-- Whether the device has a popup camera -->
     <bool name="config_hasPopupCamera">true</bool>
 
